--- a/Profile-verified.html
+++ b/Profile-verified.html
@@ -3,305 +3,405 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Verified Profile – Le Libido</title>
+  <title>Le Libido – Verified Profile</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --gold: #e1bf78;
+      --blue: #064D95;
+      --green: #06954E;
+      --red: #950606;
+    }
+
     body {
       margin: 0;
-      padding: 40px 20px;
       font-family: 'Montserrat', sans-serif;
       color: white;
-      background-color: #064D95;
-      transition: background-color 0.3s ease-in-out;
+      padding: 30px 20px;
+      box-sizing: border-box;
     }
 
-    .verified-banner {
-      background-color: #e1bf78;
-      color: #0d0d0d;
-      font-size: 0.7rem;
+    body.blue { background-color: var(--blue); }
+    body.green { background-color: var(--green); }
+    body.red { background-color: var(--red); }
+
+    .top-banner {
+      background-color: var(--gold);
+      color: #000;
+      font-size: 0.75rem;
+      padding: 6px 12px;
       font-weight: bold;
-      padding: 4px 10px;
-      text-align: center;
-      text-transform: uppercase;
-      letter-spacing: 1px;
+      position: absolute;
+      top: 0;
+      left: 0;
     }
 
-    .top-row {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    .progress-circle {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      width: 50px;
+      height: 50px;
+    }
+
+    .progress-circle svg {
+      transform: rotate(-90deg);
+    }
+
+    .progress-circle circle {
+      fill: none;
+      stroke-width: 6;
+    }
+
+    .circle-bg {
+      stroke: rgba(255, 255, 255, 0.2);
+    }
+
+    .circle-progress {
+      stroke: var(--gold);
+      stroke-linecap: round;
+      stroke-dasharray: 157;
+      stroke-dashoffset: 105; /* ~33% complete */
+    }
+
+    .progress-text {
+      position: absolute;
+      top: 12px;
+      right: 15px;
+      font-size: 0.9rem;
+      font-weight: bold;
+      color: white;
     }
 
     .logo {
       max-width: 140px;
-      margin: 20px auto 10px auto;
       display: block;
+      margin: 60px auto 40px auto;
     }
 
-    .progress-container {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      border: 4px solid rgba(255, 255, 255, 0.2);
-      position: relative;
-      margin-right: 10px;
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      font-weight: 700;
     }
 
-    .progress-fill {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      clip-path: polygon(50% 50%, 50% 0%, 100% 0%, 100% 100%, 0% 100%, 0% 0%);
-      background: #e1bf78;
-      border-radius: 50%;
-      transform: rotate(120deg);
-    }
-
-    .progress-label {
-      position: absolute;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 0.8rem;
-      font-weight: bold;
-    }
-
-    .section-title {
-      margin-top: 30px;
-      font-size: 1.3rem;
-      font-weight: bold;
-      text-align: left;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-      padding-bottom: 6px;
-    }
-
-    .field {
-      margin: 20px 0;
-      text-align: left;
-    }
-
-    label {
-      font-weight: 600;
-      display: block;
-      margin-bottom: 5px;
-    }
-
-    input[type="text"],
-    input[type="tel"],
-    input[type="email"],
-    select {
-      width: 100%;
-      padding: 10px 14px;
+    .section-label {
       font-size: 1rem;
+      font-weight: 700;
+      margin: 30px 0 10px 0;
+      border-bottom: 1px solid rgba(255,255,255,0.2);
+      padding-bottom: 6px;
+      text-align: left;
+    }
+
+    .input-group {
+      margin: 12px 0;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .input-group label {
+      font-size: 0.9rem;
+      margin-bottom: 6px;
+    }
+
+    select, input[type="text"], input[type="email"], input[type="tel"] {
       background: transparent;
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      border-radius: 8px;
+      border: none;
+      border-bottom: 1px solid rgba(255,255,255,0.4);
+      padding: 8px 4px;
       color: white;
+      width: 100%;
+      font-size: 1rem;
       outline: none;
     }
 
-    input::placeholder {
-      color: rgba(255, 255, 255, 0.5);
-    }
-
-    .photo-grid {
+    .photo-upload {
       display: flex;
-      gap: 10px;
+      flex-wrap: wrap;
+      gap: 12px;
       margin-bottom: 20px;
     }
 
-    .photo-box {
-      width: 60px;
-      height: 60px;
-      background-color: rgba(255, 255, 255, 0.1);
-      border-radius: 6px;
+    .photo-slot {
+      width: 100px;
+      height: 100px;
+      border: 1px dashed rgba(255,255,255,0.5);
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 1.6rem;
+      font-size: 2rem;
+      color: rgba(255,255,255,0.4);
       cursor: pointer;
+      position: relative;
     }
 
-    .gold-link {
-      color: #e1bf78;
+    .photo-slot:hover {
+      background-color: rgba(255,255,255,0.1);
+    }
+
+    .photo-slot span {
+      position: absolute;
+      bottom: -18px;
+      font-size: 0.75rem;
+      width: 100%;
+      text-align: center;
+    }
+
+    a.gold-link {
+      color: var(--gold);
       font-weight: bold;
+      font-size: 1rem;
       text-decoration: underline;
+    }
+        .save-btn {
+      margin: 40px auto;
+      padding: 12px 24px;
+      background-color: var(--gold);
+      color: #000;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      font-weight: bold;
       cursor: pointer;
     }
 
-    .save-button {
-      margin-top: 30px;
-      padding: 14px 28px;
-      background: transparent;
-      color: #e1bf78;
-      font-weight: bold;
-      border: 2px solid #e1bf78;
-      border-radius: 10px;
-      font-size: 1.1rem;
-      cursor: pointer;
+    .save-btn:hover {
+      background-color: #f5d78b;
     }
 
     @media (min-width: 768px) {
-      .field {
-        max-width: 400px;
+      .photo-upload {
+        gap: 20px;
       }
 
-      .photo-grid {
-        max-width: 360px;
+      .photo-slot {
+        width: 120px;
+        height: 120px;
       }
     }
   </style>
 </head>
-<body>
-<div class="verified-banner">Verified Mode</div>
-<div class="top-row">
-  <img src="https://raw.githubusercontent.com/goldlibido/Questionnaire-/refs/heads/main/golden-le-libido-logo.png" class="logo" />
-  <div class="progress-container">
-    <div class="progress-fill"></div>
-    <div class="progress-label">33%</div>
+<body class="blue"> <!-- Default background, can be changed dynamically -->
+
+  <div class="top-banner">VERIFIED MODE</div>
+
+  <div class="progress-circle">
+    <svg width="50" height="50">
+      <circle class="circle-bg" cx="25" cy="25" r="25" />
+      <circle class="circle-progress" cx="25" cy="25" r="25" />
+    </svg>
+    <div class="progress-text">33%</div>
   </div>
-</div>
-<div class="section-title">Photos</div>
-<div class="photo-grid">
-  <div class="photo-box">+</div>
-  <div class="photo-box">+</div>
-  <div class="photo-box">+</div>
-  <div class="photo-box">+</div>
-  <div class="photo-box">+</div>
-</div>
-<div class="field">
-  <label>Link to Instagram (optional)</label>
-  <input type="text" placeholder="https://instagram.com/yourhandle" />
-</div>
 
-<div class="section-title">Personal Info</div>
-<div class="field">
-  <label>Legal Name</label>
-  <input type="text" placeholder="Your full name" />
-</div>
-<div class="field">
-  <label>Phone Number</label>
-  <input type="tel" placeholder="(123) 456-7890" />
-</div>
-<div class="field">
-  <label>Email</label>
-  <input type="email" placeholder="you@example.com" />
-</div>
-<div class="field">
-  <label>Age</label>
-  <select>
-    <option>18</option>
-    <option selected>21</option>
-    <option>22</option>
-    <option>23</option>
-    <option>24</option>
-    <option>25</option>
-    <option>30+</option>
-  </select>
-</div>
-<div class="field">
-  <label>Height</label>
-  <select>
-    <option>5’5”</option>
-    <option selected>5’9”</option>
-    <option>6’0”</option>
-    <option>6’2”</option>
-  </select>
-</div>
-<div class="field">
-  <label>Sexual Orientation</label>
-  <select>
-    <option selected>Straight</option>
-    <option>Bisexual</option>
-    <option>Homosexual</option>
-    <option>Pansexual</option>
-  </select>
-</div>
-<div class="section-title">Preferences</div>
-<div class="field">
-  <label>Enjoys</label>
-  <select>
-    <option selected>Passionate sex, massage, pillow talk, cuddling</option>
-    <option>One-night stands, striptease, porn, toys</option>
-    <option>BDSM, spanking, mind games, dirty talk</option>
-  </select>
-</div>
-<div class="field">
-  <label>Role</label>
-  <select>
-    <option>Dom</option>
-    <option>Sub</option>
-    <option selected>Switch</option>
-  </select>
-</div>
-<div class="field">
-  <label>Naughty-to-Nice</label>
-  <select>
-    <option selected>Frisky</option>
-    <option>Vanilla</option>
-    <option>Kinky</option>
-  </select>
-</div>
-<div class="field">
-  <label>Looking For</label>
-  <select>
-    <option selected>Love</option>
-    <option>Good Time</option>
-  </select>
-</div>
-<div class="field">
-  <label>Open to Sugar Daddy/Mama Dynamic</label>
-  <select>
-    <option selected>Yes</option>
-    <option>No</option>
-  </select>
-</div>
-<div class="field">
-  <label>Dirty Talk Style</label>
-  <select>
-    <option selected>Praise</option>
-    <option>Playful Teasing</option>
-    <option>Degradation</option>
-    <option>Filthy</option>
-  </select>
-</div>
-<div class="field">
-  <label>Threesome Openness</label>
-  <select>
-    <option>Nope</option>
-    <option selected>Maybe</option>
-    <option>Yeah</option>
-    <option>Hell yeah</option>
-  </select>
-</div>
+  <img src="https://raw.githubusercontent.com/goldlibido/Questionnaire-/refs/heads/main/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
-<div class="field">
-  <label>Sexual Archetype</label>
-  <a href="/premium/" class="gold-link">View Full Blueprint</a>
-</div>
+  <h1>Your Profile</h1>
 
-<button class="save-button">Save Profile</button>
-<script>
-  const archetype = "Tender Protector"; // Replace this dynamically
-  const bg = {
-    "Devoted Darling": "#064D95",
-    "Mood Multiplier": "#064D95",
-    "Tender Protector": "#064D95",
-    "Heatwave": "#064D95",
-    "Promiscuous Plaything": "#06954E",
-    "Generous Giver": "#06954E",
-    "Bedroom Adventurer": "#06954E",
-    "Charmer in Charge": "#06954E",
-    "Claimed & Trained": "#950606",
-    "Punish Me": "#950606",
-    "Provoker": "#950606",
-    "Dungeon Master": "#950606"
-  };
-  document.body.style.backgroundColor = bg[archetype] || "#0d0d0d";
-</script>
+  <div class="section-label">Photos</div>
+  <div class="photo-upload">
+    <div class="photo-slot" onclick="uploadPhoto(1)">＋<span>Main Photo (Required)</span></div>
+    <div class="photo-slot" onclick="uploadPhoto(2)">＋<span>Optional</span></div>
+    <div class="photo-slot" onclick="uploadPhoto(3)">＋<span>Optional</span></div>
+    <div class="photo-slot" onclick="uploadPhoto(4)">＋<span>Optional</span></div>
+    <div class="photo-slot" onclick="uploadPhoto(5)">＋<span>Optional</span></div>
+  </div>
 
-<footer style="margin-top: 60px; text-align: center; font-size: 0.8rem; color: #999;">
-  © 2025 Le Libido. All rights reserved. |
-  <a href="/legal.html" style="color: #e1bf78; text-decoration: underline;">Legal Policy</a>
-</footer>
+  <div class="section-label">Personal Info</div>
+  <div class="input-group">
+    <label for="legalName">Legal Name</label>
+    <input type="text" id="legalName" placeholder="Full name">
+  </div>
+  <div class="input-group">
+    <label for="age">Age</label>
+    <select id="age"></select>
+  </div>
+  <div class="input-group">
+    <label for="height">Height</label>
+    <select id="height"></select>
+  </div>
+  <div class="input-group">
+    <label for="orientation">Sexual Orientation</label>
+    <select id="orientation">
+      <option>Straight</option>
+      <option>Bisexual</option>
+      <option>Homosexual</option>
+      <option>Pansexual</option>
+    </select>
+  </div>
+  <div class="input-group">
+    <label for="phone">Phone Number</label>
+    <input type="tel" id="phone" placeholder="(xxx) xxx-xxxx">
+  </div>
+  <div class="input-group">
+    <label for="email">Email</label>
+    <input type="email" id="email" placeholder="you@email.com">
+  </div>
+  <div class="input-group">
+    <label for="instagram">Instagram (Optional)</label>
+    <input type="text" id="instagram" placeholder="@handle">
+  </div>
+
+  <div class="section-label">Preferences</div>
+  <div class="input-group">
+    <label for="interaction">Interaction Preference</label>
+    <select id="interaction">
+      <option>Prefers to Approach</option>
+      <option>Prefers to Be Approached</option>
+    </select>
+  </div>
+
+  <div class="input-group">
+    <label for="role">Role</label>
+    <select id="role">
+      <option>Dominant</option>
+      <option>Submissive</option>
+      <option>Switch</option>
+    </select>
+  </div>
+
+  <div class="input-group">
+    <label for="spectrum">Naughty-to-Nice Spectrum</label>
+    <select id="spectrum">
+      <option>Vanilla</option>
+      <option>Frisky</option>
+      <option>Kinky</option>
+    </select>
+  </div>
+    <div class="input-group">
+    <label for="archetype">Sexual Archetype</label>
+    <select id="archetype">
+      <option>Devoted Darling</option>
+      <option>Mood Multiplier</option>
+      <option>Tender Protector</option>
+      <option>Heatwave</option>
+      <option>Promiscuous Plaything</option>
+      <option>Generous Giver</option>
+      <option>Bedroom Adventurer</option>
+      <option>Charmer in Charge</option>
+      <option>Claimed & Trained</option>
+      <option>Punish Me</option>
+      <option>Provoker</option>
+      <option>Dungeon Master</option>
+    </select>
+    <a href="/premium/" class="gold-link">View Full Blueprint</a>
+  </div>
+
+  <div class="input-group">
+    <label for="enjoys">Enjoys</label>
+    <select id="enjoys">
+      <option>Passionate sex, sensual massage, pillow talk, cuddling, new positions with a partner, and maybe a little whipped cream</option>
+      <option>One-night stands, giving/receiving a striptease or lap dance, watching porn together, sexy role-play, and an assortment of new sex toys</option>
+      <option>BDSM, spanking, power exchange, naughty mind games, and a side of filthy dirty talk</option>
+    </select>
+  </div>
+
+  <div class="input-group">
+    <label for="looking">Looking For</label>
+    <select id="looking">
+      <option>Love / Long-Term</option>
+      <option>Good Time / Short-Term</option>
+    </select>
+  </div>
+
+  <div class="input-group">
+    <label for="sugar">Open to Sugar Daddy/Mama Dynamic</label>
+    <select id="sugar">
+      <option>Yes</option>
+      <option>No</option>
+    </select>
+  </div>
+
+  <div class="input-group">
+    <label for="dirtyTalk">Dirty Talk Style</label>
+    <select id="dirtyTalk">
+      <option>Praise</option>
+      <option>Playful teasing</option>
+      <option>Degradation</option>
+      <option>Filthy</option>
+      <option>I plead the fifth</option>
+    </select>
+  </div>
+
+  <div class="input-group">
+    <label for="threesome">Threesome Openness</label>
+    <select id="threesome">
+      <option>No</option>
+      <option>Maybe</option>
+      <option>Yes</option>
+      <option>Why stop at 3?</option>
+    </select>
+  </div>
+
+  <div class="input-group">
+    <label for="checkins">Preferred Check-In Spots</label>
+    <input type="text" id="checkins" placeholder="e.g. bars, beaches, rooftops">
+  </div>
+
+  <div class="input-group">
+    <label for="messagesFrom">Allow Messages From</label>
+    <select id="messagesFrom">
+      <option>Verified Only</option>
+      <option>Verified & Anonymous</option>
+      <option>Anonymous Only</option>
+    </select>
+  </div>
+
+  <div class="input-group">
+    <label for="visibility">Visible To</label>
+    <select id="visibility">
+      <option>Verified Only</option>
+      <option>All Users</option>
+      <option>Anonymous Only</option>
+    </select>
+  </div>
+
+  <button class="save-btn">Save Profile</button>
+
+  <footer>
+    <p style="font-size: 0.8rem; color: white; opacity: 0.6;">
+      © 2025 Le Libido. All rights reserved. |
+      <a href="/legal.html">Legal Policy</a>
+    </p>
+  </footer>
+
+  <script>
+    // Fill age + height dropdowns
+    const ageSelect = document.getElementById("age");
+    for (let i = 18; i <= 80; i++) {
+      const opt = document.createElement("option");
+      opt.value = opt.text = i;
+      if (i === 21) opt.selected = true;
+      ageSelect.appendChild(opt);
+    }
+
+    const heightSelect = document.getElementById("height");
+    const heights = ["4'10", "4'11", "5'0", "5'1", "5'2", "5'3", "5'4", "5'5", "5'6", "5'7", "5'8", "5'9", "5'10", "5'11", "6'0", "6'1", "6'2", "6'3", "6'4", "6'5"];
+    heights.forEach(h => {
+      const opt = document.createElement("option");
+      opt.value = opt.text = h;
+      if (h === "5'9") opt.selected = true;
+      heightSelect.appendChild(opt);
+    });
+
+    // Auto-detect background from archetype
+    document.getElementById("archetype").addEventListener("change", function () {
+      const val = this.value;
+      const body = document.body;
+      body.classList.remove("blue", "green", "red");
+      const blue = ["Devoted Darling", "Mood Multiplier", "Tender Protector", "Heatwave"];
+      const green = ["Promiscuous Plaything", "Generous Giver", "Bedroom Adventurer", "Charmer in Charge"];
+      const red = ["Claimed & Trained", "Punish Me", "Provoker", "Dungeon Master"];
+      if (blue.includes(val)) body.classList.add("blue");
+      else if (green.includes(val)) body.classList.add("green");
+      else if (red.includes(val)) body.classList.add("red");
+    });
+
+    // Fake photo upload
+    function uploadPhoto(n) {
+      alert("Upload photo slot " + n);
+    }
+  </script>
 </body>
 </html>
